--- a/src/components/SideNav/index.module.css
+++ b/src/components/SideNav/index.module.css
@@ -388,6 +388,7 @@ video {
   padding-left: 30px;
   padding-top: 45px;
   padding-bottom: 50px;
+  color: #545454;
 }
 .nav nav .header {
   font-weight: 600;
