--- a/src/components/SideNav/index.module.scss
+++ b/src/components/SideNav/index.module.scss
@@ -10,7 +10,7 @@
     padding-left: 30px;
     padding-top: 45px;
     padding-bottom: 50px;
-    // color: $DocText;
+    color: $DocText;
     .header {
       font-weight: 600;
       font-size: 17px;
