--- a/src/components/SideNav/index.module.css
+++ b/src/components/SideNav/index.module.css
@@ -5,7 +5,8 @@
 *,
 ::before,
 ::after {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   /* 1 */
   border-width: 0;
   /* 2 */
@@ -188,9 +189,9 @@ select {
 2. Remove default button styles.
 */
 button,
-[type=button],
-[type=reset],
-[type=submit] {
+[type='button'],
+[type='reset'],
+[type='submit'] {
   -webkit-appearance: button;
   /* 1 */
   background-color: transparent;
@@ -232,7 +233,7 @@ Correct the cursor style of increment and decrement buttons in Safari.
 1. Correct the odd appearance in Chrome and Safari.
 2. Correct the outline style in Safari.
 */
-[type=search] {
+[type='search'] {
   -webkit-appearance: textfield;
   /* 1 */
   outline-offset: -2px;
@@ -311,14 +312,32 @@ textarea {
 1. Reset the default placeholder opacity in Firefox. (https://github.com/tailwindlabs/tailwindcss/issues/3300)
 2. Set the default placeholder color to the user's configured gray 400 color.
 */
-input::-moz-placeholder, textarea::-moz-placeholder {
+
+input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   opacity: 1;
   /* 1 */
   color: #9ca3af;
   /* 2 */
 }
 
-input:-ms-input-placeholder, textarea:-ms-input-placeholder {
+input::-webkit-input-placeholder,
+textarea::-webkit-input-placeholder {
+  opacity: 1;
+  /* 1 */
+  color: #9ca3af;
+  /* 2 */
+}
+
+input:-ms-input-placeholder,
+textarea:-ms-input-placeholder {
+  opacity: 1;
+  /* 1 */
+  color: #9ca3af;
+  /* 2 */
+}
+
+input::-ms-input-placeholder,
+textarea::-ms-input-placeholder {
   opacity: 1;
   /* 1 */
   color: #9ca3af;
@@ -337,7 +356,7 @@ textarea::placeholder {
 Set the default cursor for buttons.
 */
 button,
-[role=button] {
+[role="button"] {
   cursor: pointer;
 }
 
@@ -379,6 +398,7 @@ video {
 .nav {
   border-right: 1px solid #d9d9d9;
 }
+
 .nav nav {
   position: -webkit-sticky;
   position: sticky;
@@ -390,62 +410,93 @@ video {
   padding-bottom: 50px;
   color: #545454;
 }
+
 .nav nav .header {
   font-weight: 600;
   font-size: 17px;
 }
+
 .nav nav a {
   padding-left: 20px;
   color: #333;
+  -webkit-transition: color;
   transition: color;
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
-  transition-duration: 300ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+  -webkit-transition-duration: 300ms;
+          transition-duration: 300ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
   font-size: 0.95em;
 }
+
 .nav nav a:hover {
   color: #9d50f6;
 }
+
 .nav nav div {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   gap: 18px;
 }
+
 .nav nav .containerRef {
   margin-top: 30px;
 }
+
 .nav nav .containerDoc span .philosophy {
   padding-left: 20px;
+  -webkit-transition: color;
   transition: color;
-  transition-duration: 300ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+  -webkit-transition-duration: 300ms;
+          transition-duration: 300ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
   cursor: pointer;
 }
+
 .nav nav .containerDoc span .philosophy:hover {
   color: #9d50f6;
 }
+
 .nav nav .containerDoc span .containerPhilosophy {
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   gap: 18px;
   margin-top: 18px;
 }
+
 .nav nav .containerDoc span .containerPhilosophy .active {
   color: #9d50f6;
 }
+
 .nav nav .containerDoc span .containerPhilosophy a {
   padding-left: 40px;
+  -webkit-transition: color;
   transition: color;
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
-  transition-duration: 300ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+  -webkit-transition-duration: 300ms;
+          transition-duration: 300ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
   font-size: 0.9em;
 }
+
 .nav nav .containerDoc span .containerPhilosophy a:hover {
   color: #9d50f6;
-}/*# sourceMappingURL=index.module.css.map */
+}
+/*# sourceMappingURL=index.module.css.map */
