--- a/src/components/Terminal/index.module.css
+++ b/src/components/Terminal/index.module.css
@@ -3,13 +3,34 @@
   font-family: Consolas, monospace;
   font-size: 15px;
   background-color: #1e1e1e;
-  padding: 20px;
   border-radius: 7px;
   position: relative;
 }
+
+.terminal pre {
+  white-space: nowrap;
+  overflow: auto;
+  padding: 20px;
+}
+
+.terminal pre::-webkit-scrollbar {
+  height: 11px;
+  border-radius: 15px;
+}
+
+.terminal pre::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+.terminal pre::-webkit-scrollbar-thumb {
+  background-color: #333;
+  border-radius: 15px;
+}
+
 .terminal:last-child {
   margin-bottom: 0;
 }
+
 .terminal .head {
   pointer-events: none;
   -webkit-user-select: none;
@@ -17,22 +38,34 @@
       -ms-user-select: none;
           user-select: none;
 }
+
 .terminal .head span {
   color: #d539c3;
 }
+
 .terminal .head span:first-child {
   color: #00cc00;
 }
+
 .terminal .head span:last-child {
   color: #e3e524;
 }
+
 .terminal .body {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   gap: 10px;
   color: #ebebeb;
   margin-top: 5px;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
 }
+
 .terminal .body span:first-child {
   pointer-events: none;
   -webkit-user-select: none;
@@ -40,13 +73,12 @@
       -ms-user-select: none;
           user-select: none;
 }
-.terminal .body span:last-child {
-  width: 100%;
-}
+
 .terminal .absolute {
   position: absolute;
   opacity: 0;
 }
+
 .terminal .copied {
   font-size: 14px;
   color: #fff;
@@ -60,6 +92,8 @@
   top: 25px;
   right: 20px;
 }
+
 .terminal:hover .absolute {
   opacity: 1;
-}/*# sourceMappingURL=index.module.css.map */
+}
+/*# sourceMappingURL=index.module.css.map */
