--- a/src/pages/Docs/index.module.css
+++ b/src/pages/Docs/index.module.css
@@ -1,8 +1,12 @@
 .docs .main {
   border-top: 1px solid #d9d9d9;
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: 270px minmax(0, 1fr);
+  -ms-grid-columns: 270px minmax(0, 1fr);
+      grid-template-columns: 270px minmax(0, 1fr);
 }
+
 .docs .main main {
-  padding: 45px 100px;
-}/*# sourceMappingURL=index.module.css.map */
+  padding: 45px 140px;
+}
+/*# sourceMappingURL=index.module.css.map */
