--- a/src/pages/Docs/subpages/Main/index.module.css
+++ b/src/pages/Docs/subpages/Main/index.module.css
@@ -7,4 +7,15 @@
 .subtle_link {
   text-decoration: underline;
   color: #3d3dff;
-}/*# sourceMappingURL=index.module.css.map */
+}
+
+.ul {
+  list-style-type: disc;
+  margin-bottom: 20px;
+  margin-top: -20px;
+}
+
+.ul li {
+  margin-left: 30px;
+}
+/*# sourceMappingURL=index.module.css.map */
