--- a/src/pages/Docs/subpages/Main/index.module.scss
+++ b/src/pages/Docs/subpages/Main/index.module.scss
@@ -8,3 +8,13 @@
   text-decoration: underline;
   color: #3d3dff;
 }
+
+.ul {
+  list-style-type: disc;
+  margin-bottom: 20px;
+  margin-top: -20px;
+
+  li {
+    margin-left: 30px;
+  }
+}
