--- a/src/pages/Docs/subpages/Main/index.module.css
+++ b/src/pages/Docs/subpages/Main/index.module.css
@@ -14,8 +14,6 @@
   margin-bottom: 20px;
   margin-top: -20px;
 }
-
 .ul li {
   margin-left: 30px;
-}
-/*# sourceMappingURL=index.module.css.map */
+}/*# sourceMappingURL=index.module.css.map */
