--- a/src/components/Nav/index.module.scss
+++ b/src/components/Nav/index.module.scss
@@ -1,14 +1,42 @@
 .nav {
   padding: 25px 50px;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  gap: 15px;
   svg {
     width: 170px;
   }
 
   ul {
-    display: hidden;
+    display: none;
+  }
+  .menuBtnContainer{
+    align-self: center;
+      display: block;
+      .menuBtn{
+        width: 34px;
+        height: 4px;
+        background-color: #545454;
+        border-radius: 999px;
+        margin: auto;
+        position: relative;
+        align-self: center;
+        cursor: pointer;
+        &::before,&::after{
+          content: "";
+          position: absolute;
+          width: 40px;
+         height: 4px;
+        cursor: pointer;
+        border-radius: 999px;
+        background-color: #545454;
+        }
+        &::after{
+          margin-top: 8px;
+        }
+        &::before{
+          margin-top: -8px;
+        }
+      }
   }
 }
 @media screen and (min-width: 1024px) {
@@ -20,7 +48,9 @@
   svg {
     width: 170px;
   }
-
+.menuBtnContainer{
+    display: none;
+  }
   ul {
     list-style-type: none;
     display: flex;
