--- a/src/components/Table/index.module.css
+++ b/src/components/Table/index.module.css
@@ -7,14 +7,19 @@
   border-collapse: separate;
   min-width: 650px;
 }
+
 .table td,
 .table th {
   padding: 20px 0;
   padding-right: 60px;
 }
+
 .table th {
   text-align: left;
 }
+
 .table tr {
-  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
-}/*# sourceMappingURL=index.module.css.map */
+  -webkit-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
+          box-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
+}
+/*# sourceMappingURL=index.module.css.map */
