--- a/src/components/Nav/index.module.scss
+++ b/src/components/Nav/index.module.scss
@@ -1,29 +1,40 @@
 .nav {
-  padding: 25px 50px;
+  --horizontal-padding: 50px;
+  --vertical-padding: 25px;
+  padding: var(--vertical-padding) var(--horizontal-padding);
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  overflow: hidden;
 
-  gap: 15px;
   svg {
     width: 170px;
+    position: relative;
+    z-index: 8;
   }
 
   ul {
-    display: none;
+    display: flex;
+    list-style-type: none;
+    align-items: center;
+    gap: 40px;
   }
 
   .menuBtnContainer {
     align-self: center;
-    display: flex;
+    display: none;
     flex-direction: column;
     align-items: flex-start;
     gap: 5px;
+    position: relative;
+    z-index: 8;
     cursor: pointer;
     .menuBtn {
       width: 24px;
       height: 3px;
       background-color: #545454;
       border-radius: 999px;
+      transition: transform 0.35s;
     }
     &::before,
     &::after {
@@ -33,27 +44,63 @@
       height: 3px;
       border-radius: 999px;
       background-color: #545454;
+      transition: transform 0.35s;
+      transform-origin: left;
+    }
+
+    &.active .menuBtn {
+      transform: translateX(30vw);
+    }
+
+    &.active::before {
+      transform: rotate(45deg);
+    }
+    &.active::after {
+      transform: translateY(3px) rotate(-45deg);
+    }
+  }
+}
+
+@media screen and (max-width: 950px) {
+  .nav {
+    .menuBtnContainer {
+      display: flex;
+    }
+
+    ul {
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 30px;
+      position: fixed;
+      left: 0;
+      right: 0;
+      top: 0;
+      background-color: #fff;
+      z-index: 5;
+      padding: 40px var(--horizontal-padding);
+      padding-top: 95px;
+      box-shadow: 0 1px 10px rgba($color: #000000, $alpha: 0.1);
+      transform: translateY(-105%);
+      transition: transform 0.35s;
+
+      &.active {
+        transform: translateY(0);
+      }
     }
   }
 }
 
 @media screen and(max-width:650px) {
   .nav {
-    padding: 25px 20px;
-  }
-}
+    --horizontal-padding: 25px;
+    --vertical-padding: 20px;
 
-@media screen and (min-width: 1024px) {
-  .nav {
-    align-items: center;
-    .menuBtnContainer {
-      display: none;
+    svg {
+      width: 130px;
     }
+
     ul {
-      list-style-type: none;
-      display: flex;
-      align-items: center;
-      gap: 40px;
+      padding-top: 80px;
     }
   }
 }
