--- a/src/components/SideNav/index.module.scss
+++ b/src/components/SideNav/index.module.scss
@@ -15,62 +15,13 @@
       font-weight: 600;
       font-size: 17px;
     }
-    a {
-      padding-left: 20px;
-      color: #333;
-      transition: color;
-      width: fit-content;
-      transition-duration: 300ms;
-      transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
-      font-size: 0.95em;
-    }
-    a:hover {
-      color: #9d50f6;
-    }
-    div {
+    .container {
       display: flex;
       flex-direction: column;
       gap: 18px;
     }
     .containerRef {
       margin-top: 30px;
-    }
-    .containerDoc {
-      span {
-        .philosophy {
-          padding-left: 20px;
-          transition: color;
-          transition-duration: 300ms;
-          transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
-          cursor: pointer;
-        }
-        .philosophy:hover {
-          color: #9d50f6;
-        }
-        .containerPhilosophy {
-          position: relative;
-          display: flex;
-          flex-direction: column;
-          gap: 18px;
-          margin-top: 18px;
-          .active{
-            color: #9d50f6;
-          }
-          a {
-            padding-left: 40px;
-            transition: color;
-            width: fit-content;
-            transition-duration: 300ms;
-            transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
-            // color: #878787;
-            font-size: 0.9em;
-          }
-          a:hover {
-            color: #9d50f6;
-          }
-          
-        }
-      }
     }
   }
 }
