--- a/src/components/SideNav/index.module.scss
+++ b/src/components/SideNav/index.module.scss
@@ -27,3 +27,34 @@
     }
   }
 }
+
+@media screen and (max-width: 1180px) {
+  .nav {
+    border: 0;
+    display: none;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    height: 100vh;
+    background-color: #fff;
+    z-index: 8;
+    nav {
+      position: static;
+      padding: 50px;
+    }
+
+    &.open {
+      display: block;
+    }
+  }
+}
+
+@media screen and(max-width:650px) {
+  .nav {
+    nav {
+      padding: 25px;
+      padding-top: 40px;
+    }
+  }
+}
