--- a/src/pages/Docs/index.module.css
+++ b/src/pages/Docs/index.module.css
@@ -15,5 +15,22 @@
     -ms-grid-columns: minmax(0, 1fr);
         grid-template-columns: minmax(0, 1fr);
   }
+  .docs .main main {
+    padding-top: 35px;
+  }
+}
+
+@media screen and (max-width: 960px) {
+  .docs .main main {
+    padding: 50px;
+    padding-top: 35px;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .docs .main main {
+    padding: 25px;
+    padding-top: 35px;
+  }
 }
 /*# sourceMappingURL=index.module.css.map */
